# py-3rdparty-mediawiki

./: .gitignore  .project  .travis.yml  404.html  AGENTS.md  README.md  doc  index.html  install  mkdocs.yml  objects.inv  pyproject.toml  release  requirements.txt  setup.py
.github/workflows/: build.yml
docs/: MCP_DESIGN.md  index.md
docs/source/: conf.py  index.rst  modules.rst  tests.rst  wikibot.rst
scripts/: blackisort  doc  install  mcp  nightlywikibackup  release  wikiedit  wikinuke  wikipush  wikiupload
search/: search_index.json
source/: conf.py  index.rst  wikibot.rst
tests/: base_smw_test.py  base_test_config.py  base_wiki_test.py  basetest.py  test_MediaWikiTable.py  test_PageHistory.py  test_SMWApi.py  test_Selector.py  test_WikiPush.py  test_WikiUser.py  test_duckinterface.py  test_lambda.py  test_mcp_server.py  test_mediawiki_table.py  test_non_smw.py  test_page_history.py  test_selector.py  test_smw_api.py  test_sso.py  test_wikibot.py  test_wikiclient.py  test_wikipush.py  test_wikiquery.py  test_wikitext.py  test_wikiuser.py
wikibot/: crypt.py  lambda_action.py  mwTable.py  pagehistory.py  selector.py  smw.py  transferfiles.py  version.py  wiki.py  wikiaction.py  wikibackup.py  wikibot.py  wikiclient.py  wikiedit.py  wikinuke.py  wikipush.py  wikiquery.py  wikiupload.py  wikiuser.py
wikibot3rd/: __init__.py  crypt.py  lambda_action.py  mcp_server.py  mwTable.py  pagehistory.py  selector.py  smw.py  sso.py  sso_users.py  version.py  wiki.py  wikiaction.py  wikibackup.py  wikibot.py  wikiclient.py  wikiedit.py  wikinuke.py  wikipush.py  wikiquery.py  wikirestore.py  wikitext.py  wikiupload.py  wikiuser.py  wikiuser_cmd.py
wikibot3rd_examples/: queries.yaml
